--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -15,10 +15,10 @@
                 </li>
 
                 <li  data-toggle="collapse" data-target="#products" class="collapsed active">
-                  <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
+                  <a><i class="fa fa-gift fa-lg"></i> دانشجویان <span class="arrow"></span></a>
                 </li>
                 <ul class="sub-menu collapse" id="products">
-                    <li class="active"><a href="#">CSS3 Animation</a></li>
+                    <li class="active" [routerLink]="['student', {panelHeading: 'لیست دانشجویان'}]"><a>لیست دانشجویان</a></li>
                     <li><a href="#">General</a></li>
                     <li><a href="#">Buttons</a></li>
                     <li><a href="#">Tabs & Accordions</a></li>
